2008-09-26  Vadim Kurland  <vadim@vk.crocodile.org>

	* RuleSetView.cpp (RuleSetView::getFullRuleGroupTitle): Added
	tooltip in the rule set view for the column showing rule group
	handle, the tooltip shows group name and number of rules.

2008-09-25  Vadim Kurland  <vadim@vk.crocodile.org>

	* FirewallDialog.cpp (FirewallDialog::openFWDialog): fixed bug
	#2105977: "Viewing firewall settings change state to
	edited". Opening firewall "advanced" settings dialog triggered
	internal flag that signalled that something in the object tree has
	changed.

	* FWObject.cpp (FWObject::setInt): (change in libfwbuilder) fixed
	bug #2128261: "fwbuilder thinks the file has changed when opened
	read-only". Operation "find where used" triggered "dirty" flag on
	the object tree even though it does not change anything.

	* NetworkDialog.cpp (NetworkDialog::addressEntered): Network and
	NetworkIPv6 object dialogs accept CIDR notation in the "address"
	input field. Netmask input field is filled automatically using
	"/NN" entered as part of the address when user hits Return or Tab
	or switches to another input element using mouse click.

	* ProjectPanel_file_ops.cpp (ProjectPanel::saveIfModified): fixed
	GUI crash that happened when user made modifications in the
	default object tree but did not save the changes and then tried to
	exit the program.

	* FWBTree.cpp (FWBTree::createNewLibrary): fixed bug #2126524:
	"User Service created in the Service Group section".

	* objects_init.xml.in: bug #2126524: "User Service created in the
	Service Group section" - added missing group UserServices to the
	standard objects file.

2008-09-24  Vadim Kurland  <vadim@vk.crocodile.org>

	* Network.cpp (Network::Network): (change in libfwbuilder) set
	netmask to /32 when new Network object is created. This used to be
	the default in fwbuilder v2.1. New default of 0.0.0.0 appears to
	be confusing and error-prone, by user's requests changing default